{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 9,
  "lineage": "75329b1c-a043-e24a-70ff-4412a5c2b3e4",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014168775295:internet-gateway/igw-0fe2e1d3ac7a39b02",
            "id": "igw-0fe2e1d3ac7a39b02",
            "owner_id": "014168775295",
            "tags": {
              "Name": "\"foobarvpc\"",
              "foo": "bar"
            },
            "tags_all": {
              "Name": "\"foobarvpc\"",
              "foo": "bar"
            },
            "vpc_id": "vpc-020a53739b0facd0a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fe2e1d3ac7a39b02",
            "id": "r-rtb-0ae07e0872f05fa861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ae07e0872f05fa86",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014168775295:route-table/rtb-0ae07e0872f05fa86",
            "id": "rtb-0ae07e0872f05fa86",
            "owner_id": "014168775295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "\"foobarvpc\"-public",
              "foo": "bar"
            },
            "tags_all": {
              "Name": "\"foobarvpc\"-public",
              "foo": "bar"
            },
            "timeouts": null,
            "vpc_id": "vpc-020a53739b0facd0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079780bc770edc382",
            "route_table_id": "rtb-0ae07e0872f05fa86",
            "subnet_id": "subnet-052b654bcf9a1aba8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4c4246e0bace16e",
            "route_table_id": "rtb-0ae07e0872f05fa86",
            "subnet_id": "subnet-045403d664cc56eaf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014168775295:subnet/subnet-052b654bcf9a1aba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052b654bcf9a1aba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014168775295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "\"foobarvpc\"-public-us-west-2a",
              "foo": "bar"
            },
            "tags_all": {
              "Name": "\"foobarvpc\"-public-us-west-2a",
              "foo": "bar"
            },
            "vpc_id": "vpc-020a53739b0facd0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014168775295:subnet/subnet-045403d664cc56eaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045403d664cc56eaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014168775295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "\"foobarvpc\"-public-us-west-2b",
              "foo": "bar"
            },
            "tags_all": {
              "Name": "\"foobarvpc\"-public-us-west-2b",
              "foo": "bar"
            },
            "vpc_id": "vpc-020a53739b0facd0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:014168775295:vpc/vpc-020a53739b0facd0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0c1354963aa5d0471",
            "default_route_table_id": "rtb-046daedb0213dd4ce",
            "default_security_group_id": "sg-0e2203ee1147c16db",
            "dhcp_options_id": "dopt-0868cc30da8e8a159",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020a53739b0facd0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046daedb0213dd4ce",
            "owner_id": "014168775295",
            "tags": {
              "Name": "\"foobarvpc\"",
              "foo": "bar"
            },
            "tags_all": {
              "Name": "\"foobarvpc\"",
              "foo": "bar"
            }
          }
        }
      ]
    }
  ]
}